# IRCpp

./: CMakeCache.txt  CMakeLists.txt  IRCpp  Makefile  README.md  cmake_install.cmake
client/: main.c
config/: users.csv
include/: Channel.h  Config.h  GlobalVariables.h  Server.h  User.h
includes/: CommandHandler.hpp  Message.hpp  Server.hpp  Socket.hpp  User.hpp
src/: Channel.cpp  CommandHandler.cpp  Config.cpp  GlobalVariables.cpp  Message.cpp  Server.cpp  Socket.cpp  User.cpp  main.cpp
